// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#onAutocomplete will correctly format an API response 1`] = `
Object {
  "autocompletedResults": Array [
    Object {
      "created": Object {
        "raw": "2020-09-23T21:09:44.886Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "72ec4bf1-1ea3-4704-ac10-a1c4488fc1fa",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/search-results.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Search Results",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-07T23:46:37.268Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "16d88584-0fbc-4bd8-a521-c5f16a29e46d",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Newsroom",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:48:15.587Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "76674c64-b416-4f22-841e-6b597a562cb6",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about/history.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "History",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-15T17:33:19.501Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "8c1ef957-a3ff-416f-bdbb-36af02ea6576",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/events.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Events",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T20:00:41.972Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "03e87822-02c3-476a-a6d8-3079678d163a",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/contacts.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Contacts",
      },
    },
    Object {
      "created": Object {
        "raw": "2020-09-23T21:09:44.884Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "b0719a5e-c305-47f7-9ee0-d088a4563047",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Home",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-08-11T01:04:54.216Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "df03c642-20cf-422e-830c-d9cc550266e3",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/demo-roles-and-users.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Demo Roles and Users",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:47:36.255Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "5600dfa5-22aa-4ba7-995c-265285b482b8",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "About",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:49:45.308Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "f082f32c-8e9b-454f-b05c-9c23ade267fd",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/corporate-responsibility.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Corporate Responsibility",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:50:14.491Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "b0d5dfb2-d4af-422f-a3c0-ddd8d8142c70",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/our-companies.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Our Companies",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:50:45.737Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "beed98bd-41c4-4a44-b9e9-54bb062d8352",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/news-entry.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "News Entry",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-15T17:28:34.127Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "c8e0c2ec-be1f-4378-8df6-c2a92bc5aa27",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/all-news.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "All News",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:51:21.187Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "496d07c2-8a25-4daf-988f-1ce04b826a69",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Investors",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T22:14:03.248Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "a39f719c-f0f0-4991-9077-02617ed5189c",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/press-releases-entry.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Press Releases Entry",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:48:26.398Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "9f7d5c51-a19f-412a-a8e2-882650c8eb82",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about/leadership.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Leadership",
      },
    },
  ],
}
`;

exports[`#onAutocomplete will not return anything for suggestions 1`] = `Object {}`;

exports[`#onAutocompleteResultClick will call the API with the correct body params 1`] = `undefined`;

exports[`#onSearch will correctly format an API response 1`] = `
Object {
  "facets": Object {
    "jgql:tags": Array [
      Object {
        "data": Array [
          Object {
            "count": 1,
            "value": "food",
          },
          Object {
            "count": 1,
            "value": "health",
          },
          Object {
            "count": 1,
            "value": "movies",
          },
        ],
        "field": "jgql:tags",
        "type": "value",
      },
    ],
  },
  "requestId": "",
  "results": Array [
    Object {
      "created": Object {
        "raw": "2020-09-23T21:09:44.886Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "72ec4bf1-1ea3-4704-ac10-a1c4488fc1fa",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/search-results.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Search Results",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-07T23:46:37.268Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "16d88584-0fbc-4bd8-a521-c5f16a29e46d",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Newsroom",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:48:15.587Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "76674c64-b416-4f22-841e-6b597a562cb6",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about/history.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "History",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-15T17:33:19.501Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "8c1ef957-a3ff-416f-bdbb-36af02ea6576",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/events.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Events",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T20:00:41.972Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "03e87822-02c3-476a-a6d8-3079678d163a",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/contacts.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Contacts",
      },
    },
    Object {
      "created": Object {
        "raw": "2020-09-23T21:09:44.884Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "b0719a5e-c305-47f7-9ee0-d088a4563047",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Home",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-08-11T01:04:54.216Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "df03c642-20cf-422e-830c-d9cc550266e3",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/demo-roles-and-users.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Demo Roles and Users",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:47:36.255Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "5600dfa5-22aa-4ba7-995c-265285b482b8",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "About",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:49:45.308Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "f082f32c-8e9b-454f-b05c-9c23ade267fd",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/corporate-responsibility.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Corporate Responsibility",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:50:14.491Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "b0d5dfb2-d4af-422f-a3c0-ddd8d8142c70",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/our-companies.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Our Companies",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:50:45.737Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "beed98bd-41c4-4a44-b9e9-54bb062d8352",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/news-entry.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "News Entry",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-15T17:28:34.127Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "c8e0c2ec-be1f-4378-8df6-c2a92bc5aa27",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/all-news.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "All News",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:51:21.187Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "496d07c2-8a25-4daf-988f-1ce04b826a69",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Investors",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T22:14:03.248Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "a39f719c-f0f0-4991-9077-02617ed5189c",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/investors/press-releases-entry.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Press Releases Entry",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-06T17:48:26.398Z",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "9f7d5c51-a19f-412a-a8e2-882650c8eb82",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/about/leadership.html",
      },
      "score": Object {
        "raw": 1,
      },
      "title": Object {
        "raw": "Leadership",
      },
    },
  ],
  "totalPages": NaN,
  "totalResults": 15,
}
`;
